<resources>
    <string name="app_name">arabam</string>
    <string name="detail_fragment_toolbar">Advert Detail</string>
    <string name="results_failed">Results could not be loaded</string>
    <string name="retry">Retry</string>
    <string name="no_results_found">No results found for this query</string>
    <string name="price">Price</string>
    <string name="date">Advert Date</string>
    <string name="model">Model</string>
    <string name="gear">Gear Type</string>
    <string name="fuel">Fuel Type</string>
    <string name="color">Color</string>
    <string name="year">Year</string>
    <string name="kilometer">Kilometer</string>
    <string name="adverb_details">Advert Info</string>
    <string name="adverb_explanations">Explanation</string>
    <string name="call">Call</string>
    <string name="user_info">User Info</string>
    <string name="id">Id</string>
    <string name="user_name_surname">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="list_fragment_toolbar">Cars</string>
    <string name="filter_results">Filter</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="sort_results">Sort</string>
    <string name="price_sort_cheap">Price - cheap to expensive</string>
    <string name="price_sort_expensive">Price - expensive to cheap</string>
    <string name="date_sort_old">Advert date - old to new</string>
    <string name="date_sort_new">Advert date - new to old</string>
    <string name="model_sort_new">Model date - new to old</string>
    <string name="model_sort_old">Model date - old to new</string>
    <string name="wp_text">I have found a suitable car for you… </string>
    <string name="wp_not_loaded">WhatsApp is not installed</string>
    <string name="network_not_available">Something went wrong!</string>
    <string name="advert_date">Advert Date</string>
    <string name="filter_adverts_all">All</string>
    <string name="filter_adverts_last_one_day">Last 1 Day</string>
    <string name="filter_adverts_last_three_day">Last 3 Day</string>
    <string name="filter_adverts_last_one_week">Last 1 Week</string>
    <string name="filter_adverts_last_one_month">Last 1 Month</string>
    <string name="filter_adverts_last_three_month">Last 3 Month</string>
    <string name="okay">Okay</string>
    <string name="year_filter_min_hint">Such As 2011</string>
    <string name="year_filter_max_hint">Such As 2021</string>
    <string name="oldest">The Oldest</string>
    <string name="latest">The Latest</string>
    <string name="and_below">and below</string>
    <string name="and_above">and above</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="could_not_load_search_results">Could not load search results: %s</string>
</resources>