<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/sort_bottom_sheet_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_baseline_sort_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/sort_bottom_sheet_icon"
            android:text="@string/sort_results"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.05dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorDivider" />

    <RelativeLayout
        android:id="@+id/sort_fragment_price_cheap_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/price_sort_cheap" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sort_fragment_price_expensive_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/price_sort_expensive" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sort_fragment_advert_date_old_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/date_sort_new" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sort_fragment_advert_date_new_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/date_sort_old" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sort_fragment_model_date_old_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/model_sort_new" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sort_fragment_model_date_new_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/model_sort_old" />
    </RelativeLayout>


</LinearLayout>