<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/alert_dialog_oldest_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:text="@string/oldest" />

        <EditText
            android:id="@+id/min_year_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@+id/alert_dialog_oldest_text_view"
            android:background="@null"
            android:gravity="end"
            android:hint="@string/year_filter_min_hint"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.05dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/alert_dialog_latest_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:text="@string/latest" />

        <EditText
            android:id="@+id/max_year_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@+id/alert_dialog_latest_text_view"
            android:background="@null"
            android:gravity="end"
            android:hint="@string/year_filter_max_hint"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.05dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorDivider" />

</LinearLayout>