<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/filter_results"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.05dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorDivider" />

    <RelativeLayout
        android:id="@+id/filter_fragment_year_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/year" />

        <TextView
            android:id="@+id/filter_fragment_year_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@+id/filter_fragment_year_arrow"
            android:text="@string/filter_adverts_all" />

        <ImageView
            android:id="@+id/filter_fragment_year_arrow"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/filter_fragment_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/date" />

        <TextView
            android:id="@+id/filter_fragment_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@+id/filter_fragment_date_arrow"
            android:text="@string/filter_adverts_all" />

        <ImageView
            android:id="@+id/filter_fragment_date_arrow"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filter_fragment_apply_filter_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/apply_filter" />


</LinearLayout>