<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/list_app_bar_layout"
        style="@style/Theme.Arabam.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/list_fragment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:titleTextColor="@color/lightGray">


        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/filter_result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_app_bar_layout"
        android:background="@color/lightGray_2"
        android:elevation="8dp">

        <View
            android:id="@+id/horizontal_center_view"
            android:layout_width="1dp"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="8dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:id="@+id/list_filter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_toStartOf="@+id/horizontal_center_view"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_filter_alt_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_results"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_sort_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_toEndOf="@+id/horizontal_center_view"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_sort_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_results"
                android:textSize="13sp" />
        </LinearLayout>

    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/filter_result_layout"
        tools:listitem="@layout/item_cars" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/purple_200"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_view_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_retry"
        android:layout_centerHorizontal="true"
        android:text="@string/results_failed"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/retry"
        android:visibility="gone"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/text_view_no_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_results_found"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_view_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_results_found"
        android:visibility="gone"
        tools:visibility="visible" />


</RelativeLayout>

